--- a/multicontainer-client/src/main/openshift/service.yml
+++ b/multicontainer-client/src/main/openshift/service.yml
@@ -6,7 +6,7 @@ metadata:
   name: @project.artifactId@
 spec:
   selector:
-    deploymentconfig: @project.artifactId@
+    deploymentconfig: @project.parent.artifactId@
   ports:
     - nodePort: 0
       port: 8080
